# specimen

./: .gitignore  README.md  go.mod  go.sum
.github/workflows/: workflow.yaml
example/novel/: novel_data_with_alias.yaml  novel_test.go  virtual_file_test.go
go/: README.md  file.go  flag.go  go.mod  go.sum  init.go  nodule.go  run.go  structure.go  testcontext.go  tree.go
go/datatree/: datatree.go
go/orderedstringmap/: orderedstringmap.go
go/specimen/: README.md  file.go  flag.go  init.go  nodule.go  run.go  spec_test.go  structure.go  tree.go
go/specimen/focustree/: focustree.go
go/specimen/orderedstringmap/: orderedstringmap.go
go/specimen/syaml/: alias.go  map.go
go/syaml/: assert.go  document.go  map.go
js/: .gitignore  .npmignore  .prettierrc  README.md  package.json  tsconfig.json
js/src/: deepEqual.ts  file.ts  flag.ts  index.ts  nodule.ts  run.ts  spec_test.ts  structure.ts  tree.ts
js/src/focustree/: focustree.ts
js/src/syaml/: assert.ts  check.ts  index.ts  map.ts  resolve.ts
python/: README.md  __init__.py  file.py  flag.py  nodule.py  pyproject.toml  run.py  spec_test.py  testcase.py  tree.py
python/focustree/: __init__.py  focustree.py
python/specimen/: __init__.py  nodule.py  spec_test.py
python/specimen/focustree/: focustree.py
python/specimen/syaml/: check.py  map.py
python/syaml/: __init__.py  assertit.py  check.py  map.py
rust/: Cargo.toml  README.md
rust/focustree/: .gitignore  Cargo.toml  focustree.rs
rust/multistringmap/: Cargo.toml  multistringmap.rs
rust/src/: file.rs  flag.rs  lib.rs  nodule.rs  tree.rs  yaml.rs
rust/tests/: counter_test.rs  danger.rs  novel_test.rs  null_value_test.rs  spec_test.rs  zoo_test.rs
rust/writable/: Cargo.toml  writable.rs
rust/yaml/: Cargo.toml  yaml.rs
spec/: about.yaml  flag.yaml  matrix.yaml  report.yaml
test/counter/: counter.spec.yaml  counter_data.yaml  counter_test.go  counter_test.js  counter_test.py
test/danger/: danger.yaml  danger_test.go
test/novel/: .gitignore  novel.go  novel.js  novel.py  novel_data.yaml  novel_data_with_alias.yaml  novel_test.go  novel_test.js  novel_test.py  package.json  virtual_file_test.go
test/nullValue/: nullValue_data.yaml  nullValue_test.go  nullValue_test.js  nullValue_test.py
test/zoo/: zoo.go  zoo.js  zoo.py  zoo_data.yaml  zoo_test.go  zoo_test.js  zoo_test.py
