[package]
name = "specimen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
focustree = { path = "./focustree" }
yaml = { path = "./yaml" }
linked-hash-map = "0.5.6"

[dev-dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"

[lib]
