[package]
name = "specimen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
focustree = { path = "./focustree" }
writable = { path = "./writable" }
yaml = { path = "./yaml" }
multistringmap = { path = "./multistringmap" }

[dev-dependencies]
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
yaml-rust = "0.4.5"

[lib]
