[workspace]

[package]
name = "specimen"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A data-driven testing library as well as a yaml data format."
homepage = "https://github.com/ditrit/specimen"
repository = "https://github.com/ditrit/specimen"
readme = "../README.md"
keywords = ["testing", "specification", "yaml"]
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specimen__focustree = { path = "./focustree", version = "0.1.0" }
specimen__writable = { path = "./writable", version = "0.1.0" }
specimen__yaml = { path = "./yaml", version = "0.1.0" }
specimen__multistringmap = { path = "./multistringmap", version = "0.1.0" }

[dev-dependencies]
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
yaml-rust = "0.4.5"

[lib]
