[package]
name = "specimen__multistringmap"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "An algorithm to compute cross products of multiple arrays."
homepage = "https://github.com/ditrit/specimen"
repository = "https://github.com/ditrit/specimen"
readme = "../../README.md"

[lib]
name = "specimen__multistringmap"
path = "multistringmap.rs"

[dependencies]
linked-hash-map = "0.5.6"
